@@ -8,6 +8,7 @@ import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -44,8 +45,8 @@ public class UserService {
         return repository.findById(id);
     }
 
-    public Flux<User> buscarPorUsernames(String username1, String username2) {
-        return repository.findByUsernameIn(List.of(username1, username2));
+    public Flux<User> buscarPorUsernames(String ... users) {
+        return repository.findByUsernameIn(Arrays.asList(users));
     }
 
 }
